force-app/main/default/objects/Account/fields/Callable_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Callable_Contacts__c</fullName>
    <label>Callable Contacts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>