force-app/main/default/objects/Account/fields/MultiTestCounter__c.field-meta.xml
<CustomField>
    <fullName>MultiTestCounter__c</fullName>
    <label>MultiTest Counter</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>